refactor: 도메인 계층에 대한 불필요 테스트 삭제 및 예외 정리